cis/overlays/prod/ingress.yaml
#The configuration in this file would be common as the request are routed through nginx
apiVersion: extensions/v1beta1
kind: Ingress
metadata: # These properties would remain same as they are served through nginx
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      kubernetes.io/ingress.class: nginx
      # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      # nginx.ingress.kubernetes.io/ssl-passthrough: “true”
  name: cis-ingress
spec:
  rules:
    - host: 
      http:
        paths:
          - backend:
              serviceName: cis
              servicePort: 8080
            path: /
